; ModuleID = '/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkj4a/j4a/class/android/media/extr_MediaCodec.c_J4AC_android_media_MediaCodec__BufferInfo__offset__set.c'
source_filename = "/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkj4a/j4a/class/android/media/extr_MediaCodec.c_J4AC_android_media_MediaCodec__BufferInfo__offset__set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32 (%struct.TYPE_5__**, i32, i32, i32)* }

@class_J4AC_android_media_MediaCodec__BufferInfo = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @J4AC_android_media_MediaCodec__BufferInfo__offset__set(%struct.TYPE_5__** %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_5__**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.TYPE_5__** %0, %struct.TYPE_5__*** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %4, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load i32 (%struct.TYPE_5__**, i32, i32, i32)*, i32 (%struct.TYPE_5__**, i32, i32, i32)** %9, align 8
  %11 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %4, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @class_J4AC_android_media_MediaCodec__BufferInfo, i32 0, i32 0), align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 %10(%struct.TYPE_5__** %11, i32 %12, i32 %13, i32 %14)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
